# PyTorcs

./: Makefile.am  acinclude.m4  aclocal.m4  autogen.sh  configure.in  openracing.in
blender/: export_wtf.py
data/: Makefile.am  install.sh.in  ogre.cfg  openracing.xml  plugins.cfg  raceman.xml  resources.cfg
data/cars/p406/: p406.xml
data/categories/: Track-FWD-GrB.xml  Track-RWD-GrB.xml
data/drivers/olethros/: olethros.xml
data/drivers/olethros/0/: default.xml
data/drivers/olethros/0/practice/: aalborg.xml  alpine-1.xml  dirt-2.xml  dirt-3.xml  g-track-3.xml  michigan.xml  mixed-1.xml  mixed-2.xml  wheel-1.xml
data/drivers/olethros/0/qualifying/: aalborg.xml  dirt-2.xml  g-track-3.xml
data/drivers/olethros/0/race/: alpine-1.xml  dirt-2.xml  dirt-3.xml  e-track-2.xml  g-track-3.xml  wheel-1.xml
data/drivers/olethros/1/: default.xml
data/drivers/olethros/1/practice/: g-track-3.xml  michigan.xml  wheel-1.xml
data/drivers/olethros/1/qualifying/: wheel-1.xml
data/drivers/olethros/1/race/: g-track-3.xml
data/drivers/olethros/2/: default.xml
data/drivers/olethros/2/practice/: e-track-4.xml
data/drivers/olethros/2/qualifying/: e-track-3.xml
data/drivers/olethros/2/race/: e-track-3.xml  e-track-4.xml
data/drivers/olethros/3/: default.xml
data/drivers/olethros/4/: default.xml
data/drivers/olethros/4/qualifying/: e-track-3.xml
data/drivers/olethros/4/race/: e-track-4.xml
data/drivers/olethros/5/: default.xml
data/drivers/olethros/6/: default.xml
data/drivers/olethros/7/: default.xml
data/drivers/olethros/7/practice/: b-speedway.xml  e-track-1.xml  e-track-3.xml  eroad.xml  michigan.xml
data/drivers/olethros/7/race/: b-speedway.xml  e-track-1.xml  e-track-3.xml  eroad.xml  g-track-2.xml  michigan.xml
data/drivers/olethros/8/: default.xml
data/drivers/olethros/9/: default.xml
data/drivers/olethros/9/qualifying/: michigan.xml
data/hud/: hud.material  hud.overlay
data/mygui/: core.skin
man/: Makefile.am  openracing.1
robot/: CarParam.py  CommonUtils.py  Cubic.py  CubicSpline.py  Lane.py  LanePoint.py  Quadratic.py  Quaternion.py  RobotTools.py  Section.py  Situation.py  Torcs.py  Track.py  TrackDesc.py
sim/: Main.py  Makefile.am  Makefile.sync  compile.sh  config-Minity.local  config-humanity  run.sh
sim/application/: ApplicationController.py  OpenRacingConfig.py  __init__.py
sim/audio/: AlAudioManager.py
sim/core/: AlphaUTI.py  AudioManager.py  CarManager.py  IGui.py  InputManager.py  MathTools.py  RaceManager.py  Robot.py  RobotModule.py  SimuModule.py  Simulator.py  UTI.py  __init__.py
sim/core/exceptions/: GraphicException.py  InvalidConfigurationException.py
sim/graphic/: GraphicModule.py  OAvatars.py  OCameras.py  OContext.py  OGui.py  OScene.py  OgreRenderer.py  TestCameras.py
sim/graphic/gui/: ConfigMenu.py  Hud.py  MainMenu.py
sim/human/: HumanModule.py  HumanRobot.py
sim/libsimulator/: Makefile.am  compile.sh
sim/libsimulator/interfaces/: Makefile.am  car.h  raceman.h  simu.h
sim/libsimulator/math/: linalg_t.h  misc.h  straight2_t.h  v2_t.h  v3_t.h  v4_t.h
sim/libsimulator/plib/: Makefile.am  sg.cpp  sg.h
sim/libsimulator/simuv2/: Makefile.am  aero.cpp  axle.cpp  brake.cpp  car.cpp  carstruct.h  collide.cpp  differential.cpp  engine.cpp  sim.h  simu.cpp  simuitf.cpp  steer.cpp  susp.cpp  transmission.cpp  transmission.h  wheel.cpp  wheel.h
sim/libsimulator/tgf/: Makefile.am  directory.cpp  hash.cpp  module.cpp  os.cpp  os.h  params.cpp  tgf.cpp  tgf.h  trace.cpp
sim/libsimulator/txml/: Makefile.am  asciitab.h  gennmtab.c  xml.cpp  xmlrole.c  xmltok.c
sim/ode/: OdeMesh.py  OdeSimulator.py  RayCastData.py  SceneObject.py
sim/swigtorcs/: Makefile.am  Makefile.include  __init__.py  compile.sh  swigcar.i  swiggfparm.i  swiggraphic.i  swigmath.i  swigraceman.i  swigrobot.i  swigrobottools.i  swigsimu.i  swigtorcs.h  swigtorcs.i  swigtrack.i
