noinst_LTLIBRARIES = libsimuv2.la
libsimuv2_la_SOURCES = aero.cpp axle.cpp brake.cpp car.cpp categories.cpp collide.cpp differential.cpp engine.cpp simu.cpp simuitf.cpp steer.cpp susp.cpp transmission.cpp wheel.cpp aero.h axle.h brake.h carstruct.h differential.h engine.h sim.h steer.h susp.h transmission.h wheel.h
INCLUDES = -I@top_srcdir@/src/libsimulator -I@top_srcdir@/src/libsimulator/includes
