noinst_LTLIBRARIES = libtxml.la
libtxml_la_SOURCES = gennmtab.c hashtable.c xml.cpp xmlparse.c xmlrole.c xmltok.c asciitab.h codepage.h filemap.h hashtable.h iasciitab.h latin1tab.h nametab.h utf8tab.h xmldef.h xml.h xmlparse.h xmlrole.h xmltok.h xmltok_impl.h
INCLUDES = -I@top_srcdir@/src/libsimulator

